# xarray-linked-indexes

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  netlify.toml  pyproject.toml
.github/workflows/: deploy.yml  test.yml
docs/: DimensionInterval.ipynb  abs_rel_time_example.ipynb  alt-direct-coords.ipynb  alt-multiindex.ipynb  alt-ndpoint.ipynb  alternatives.md  cell_hierarchy_example.ipynb  index.md  index_repr_demo.ipynb  multi_interval_example.ipynb  myst.yml  nd_index_demo.ipynb  ndindex_performance.ipynb  onset_duration_example.ipynb
src/linked_indices/: __init__.py  absolute_relative_index.py  benchmark_utils.py  example_data.py  interval_index.py  multi_interval_index.py  nd_index.py  util.py  viz.py
tests/: test_absolute_relative_index.py  test_example_data.py  test_interval_index.py  test_multi_interval_index.py  test_nd_index.py  test_repr.py  test_viz.py
