[project]
name = "linked-indices"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Ian Hunt-Isaak", email = "ianhuntisaak@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "pooch>=1.8.2",
    "xarray>=2025.12.0",
]

[project.scripts]
linked-indices = "linked_indices:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/linked_indices/_version.py"

[dependency-groups]
dev = [
  "black>=25.12.0",
  "isort>=7.0.0",
  "jupyterlab>=4.5.0",
  "jupyterlab-code-formatter>=3.0.2",
  "jupyterlab-vim>=4.1.4",
  "matplotlib>=3.10.7",
  "netcdf4>=1.7.3",
  "pytest>=9.0.2",
  "ruff>=0.14.8",
  "scipy>=1.16.3",
  "zarr>=3.1.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
