[project]
name = "linked-indices"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
license = "BSD-3-Clause"
authors = [{ name = "Ian Hunt-Isaak", email = "ianhuntisaak@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["xarray"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/linked_indices/_version.py"

[dependency-groups]
dev = [
  "black>=25.12.0",
  "isort>=7.0.0",
  "jupyterlab>=4.5.0",
  "jupyterlab-code-formatter>=3.0.2",
  "jupyterlab-git>=0.51.3",
  "jupyterlab-myst>=2.4.2",
  "matplotlib>=3.10.7",
  "netcdf4>=1.7.3",
  "pooch>=1.8.2",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.8",
  "scipy>=1.16.3",
  "xarray-fancy-repr>=0.0.2",
  "zarr>=3.1.5",
]
docs = [
    "jupyter-book>=2.1.0",
]
vim = ["jupyterlab-vim>=4.1.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
